@@ -7,7 +7,7 @@ use Getopt::Long;
 use Digest::SHA1 qw(sha1_hex);
 
 # This is updated by the update-revision.pl script.
-my $revision = 9815;
+my $revision = 9840;
 
 # Generate list with:
 # vislcg3 --help 2>&1 | perl -wpne 'if (/^ / && /-(\w), --([-\w]+)/) {print "$2|$1=s\n"} elsif (/^ / && /--([-\w]+)/) {print "$1=s\n"} s/^.*$//s;' | perl -wpne 's/^/"/; s/$/",/;'
