@@ -153,7 +153,7 @@ Cohort *GrammarApplicator::runContextualTest(SingleWindow *sWindow, size_t posit
 		sWindow = mark->parent;
 		position = mark->local_number;
 	}
-	int32_t pos = static_cast<int32_t>(position) + test->offset;
+	int32_t pos = 0;
 
 	if (test->tmpl) {
 		uint64_t orgpos = test->tmpl->pos;
@@ -409,7 +409,9 @@ Cohort *GrammarApplicator::runContextualTest(SingleWindow *sWindow, size_t posit
 			size_t seen = 0;
 			if ((test->pos & POS_SELF) && (!(test->pos & MASK_POS_LORR) || ((test->pos & POS_DEP_PARENT) && !(test->pos & POS_DEP_GLOB)))) {
 				++seen;
-				nc = runSingleTest(cohort, test, rvs, &retval, deep, origin);
+				assert(pos >= 0 && pos < static_cast<int32_t>(sWindow->cohorts.size()) && "Somehow, the input position wasn't inside the current window.");
+				Cohort *self = sWindow->cohorts[position];
+				nc = runSingleTest(self, test, rvs, &retval, deep, origin);
 			}
 			if (!(rvs & TRV_BREAK)) {
 				Cohort *current = cohort;
