@@ -449,6 +449,7 @@ int TextualParser::parseContextualTestPosition(UChar *& p, ContextualTest& t) {
 
 		size_t tries;
 		for (tries=0 ; *p != ' ' && *p != '(' && tries < 100 ; ++tries) {
+			// ToDo: SUB_SCANALL/FIRST does nothing at all - make them do something.
 			if (*p == '*' && *(p+1) == '*') {
 				t.pos |= POS_SUB_SCANALL;
 				p += 2;
