@@ -1,3 +1,12 @@
+2014-03-24  tino
+
+	* [r9815] ChangeLog, manual/dependencies.xml,
+	  scripts/cg3-autobin.pl, src/GrammarApplicator_matchSet.cpp,
+	  src/GrammarApplicator_runRules.cpp, src/main.cpp,
+	  src/version.hpp, test/T_RegExp/grammar.cg3: Fix parsing non-UTF-8
+	  cmdline args; Fix readings' plain cache being used with special
+	  sets
+
 2014-03-11  tino
 
 	* [r9768] src/CMakeLists.txt: make test
@@ -2455,7 +2464,4 @@
 	* [r7126] src/GrammarApplicator.h, src/cg3.h, src/libcg3.cpp: Just
 	  maybe, that's a usable first API...
 	* [r7123] src/libcg3.cpp: More library body.
-	* [r7122] src/GrammarApplicator.h,
-	  src/GrammarApplicator_runGrammar.cpp, src/cg3.h, src/libcg3.cpp:
-	  More library body.
 
